made mobile responsive

--- a/main.css
+++ b/main.css
@@ -1,9 +1,9 @@
 body {
-    margin: 0 auto!important;
-    width: 990px!important;
-    background: rgb(46, 9, 9)!important;
-    color: rgb(216, 196, 14)!important;
-    font-family: 'Mali', cursive!important;
+    margin: 0 auto;
+    width: 990px;
+    background: rgb(73, 14, 14);
+    color: rgb(216, 196, 14);
+    font-family: 'Mali', cursive;
     font-size: 30px;
     height: 100%;
 }
@@ -17,13 +17,13 @@ body {
 
 h1 {
     text-align: center;
-    margin-top: 6%!important;
-    font-family: 'Mali', cursive!important;
+    margin-top: 6%;
+    font-family: 'Mali', cursive;
 }
 
 #location {
     display: grid;
-    margin-top: 3%!important;
+    margin-top: 3%;
     grid-column: 2 / 3;
     grid-row: 1 / 2;
     justify-content: center;
@@ -55,17 +55,19 @@ h1 {
     grid-column: 2 / 4;
     grid-row: 3 / 4;
     border-radius: 4px;
-    background: rgb(167, 37, 139);
-    color: rgb(216, 196, 14);
-    width: 42%;
-    height: 62%;
+    border: none;
+    background: rgb(211, 109, 13);
+    color: rgb(17, 17, 15);
+    font-size: 12px;
+    width: 35%;
+    height: 55%;
     justify-self: center;
 }
 
 #toggle:active {
-    width: 40%;
-    height: 60%;
-    font-size: 30%;
+    width: 34%;
+    height: 54%;
+    font-size: 10px;
 }
 
 #time {
@@ -73,4 +75,31 @@ h1 {
     grid-column: 2 / 4;
     grid-row: 4 / 5;
     text-align: center;
+}
+
+@media all and (max-width: 800px) {
+    body {
+        width: 600px;
+    }
+
+    #location, #temperature, #description, #weatherIcon, #time {
+        font-size: 20px;
+    }
+
+    h1 {
+        margin-left: 33%;
+    }
+
+    #toggle {
+        width: 50%;
+    }
+
+    h1 {
+        font-size: 30px;
+        margin-right: 33%;
+    }
+
+    .container {
+        grid-gap: 10px;
+    }
 }
