--- a/main.css
+++ b/main.css
@@ -1,9 +1,15 @@
+:root {
+    --black-han-font: 'Black Han Sans', sans-serif;
+}
+
 body {
     margin: 0 auto;
     width: 990px;
-    background: rgb(73, 14, 14);
+    background: #114357;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to left, #F29492, #114357);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to left, #F29492, #114357); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     color: rgb(216, 196, 14);
-    font-family: 'Mali', cursive;
+    font-family: 'Black Han Sans', sans-serif;
     font-size: 30px;
     height: 100%;
 }
@@ -18,7 +24,6 @@ body {
 h1 {
     text-align: center;
     margin-top: 6%;
-    font-family: 'Mali', cursive;
 }
 
 #location {
@@ -34,18 +39,19 @@ h1 {
     grid-column: 3 / 4;
     grid-row: 1 / 2;
     justify-content: center;
+    align-items: center;
 }
 
 #description {
     display: grid;
-    grid-column: 3 / 4;
+    grid-column: 2 / 3;
     grid-row: 2 / 3;
     justify-content: center;
 }
 
 #weatherIcon {
     display: grid;
-    grid-column: 2 / 3;
+    grid-column: 3 / 4;
     grid-row: 2 / 3;
     justify-content: center;
 }
@@ -56,18 +62,22 @@ h1 {
     grid-row: 3 / 4;
     border-radius: 4px;
     border: none;
-    background: rgb(211, 109, 13);
-    color: rgb(17, 17, 15);
-    font-size: 12px;
-    width: 35%;
+    background: #f7ff00;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #db36a4, #f7ff00);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #db36a4, #f7ff00); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    color: rgb(15, 15, 14);
+    font-size: 20px;
+    font-weight: 900;
+    border: 5px solid rgb(209, 212, 14);
+    width: 50%;
     height: 55%;
     justify-self: center;
 }
 
 #toggle:active {
-    width: 34%;
+    width: 48%;
     height: 54%;
-    font-size: 10px;
+    font-size: 18px;
 }
 
 #time {
